Fixed alignment for page components

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
 
 .container {
   display: flex;
+  justify-content: center;
+  /* Yatay hizalama */
+  /* align-items: center;*/
+  /* Dikey hizalama */
+  height: 100vh;
+  /* Sayfanın tam boyunu kullanmak için */
 }
 
 header {
